--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,24 @@
   </head>
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
-    <include src="./partials/example.html"></include>
+   <form class="search-form" id="search-form">
+  <input
+    type="text"
+    name="searchQuery"
+    autocomplete="off"
+    placeholder="Search images..."
+  />
+  <button class="submit-btn" type="submit">Search</button>
+</form>
+
+<ul class="image-list">
+
+</ul>
+
+<div id="pagination" class="tui-pagination"></div>
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
-    <script src="./index.js"></script>
+    <!-- <script src="./index.js"></script> -->
+<script src="./js/pagination.js"></script>
   </body>
 </html>
