intersection_observer_done

--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,8 @@
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <!-- <script src="./index.js"></script> -->
-<script src="./js/pagination.js"></script>
+    <include src="./partials/footer.html"></include>
+<!-- <script src="./js/pagination.js"></script> -->
+<script src="./js/intersection.js"></script>
   </body>
 </html>
