--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,7 @@
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <!-- <script src="./index.js"></script> -->
     <include src="./partials/footer.html"></include>
+    <imclude src="'./partials/example.html"></imclude>
 <!-- <script src="./js/pagination.js"></script> -->
 <script src="./js/intersection.js"></script>
   </body>
